2006-10-15  Bernhard Fischer  <aldot@gcc.gnu.org>

	* final.c: Update Copyright year. Commentary typo fix. Fix whitespace

2006-10-14  Uros Bizjak  <uros@kss-loka.si>

	* config/i386/athlon.md (athlon_fist): Add fisttp.

2006-10-13  David Edelsohn  <edelsohn@gnu.org>
	    Ian Lance Taylor  <ian@airs.com>

	PR middle-end/29250
	* expr.c (expand_expr_real_1) <NON_LVALUE_EXPR, NOP_EXPR,
	CONVERT_EXPR>: Change EXPAND_SUM modifier to EXPAND_NORMAL when
	recursing.

2006-10-14  Kazu Hirata  <kazu@codesourcery.com>

	* config/score/score.c, config/score/score.h: Fix comment
	typos.

2006-10-13  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	PR bootstrap/29402
	* Makefile.in (ALL_GTFILES_H): Use $(sort ...) instead of
	shell pipeline.

2006-10-13  Eric Christopher  <echristo@apple.com>

	* config/darwin.h (HANDLE_PRAGMA_PACK_PUSH_POP): Define.

2006-10-13  Carlos O'Donell  <carlos@codesourcery.com>

	Revert this change:
	2006-10-13  Carlos O'Donell  <carlos@codesourcery.com>
	* config/elfos.h (MAX_OFILE_ALIGNMENT): Default to largest
	alignment supported by 32-bit ELF.

2006-10-13  Eric Christopher  <echristo@apple.com>

	* config/darwin.c (darwin_emit_unwind_label): Strip
	name encoding. Use DECL_ASSEMBLER_NAME_SET_P.

2006-10-13  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/29446
	* tree-vrp.c (fix_equivalence_set): Remove.
	(extract_range_from_assert): Do not call fix_equivalence_set.
	(debug_value_range): Print a newline.
	(compare_name_with_value): For equivalence sets with
	inconsistent value ranges conservatively bail out.
	(compare_names): Likewise.

2006-10-13  David Edelsohn  <edelsohn@gnu.org>

	* doc/install.texi (*-ibm-aix*): Add comment about 32-bit GMP
	and MPFR for gfortran.

2006-10-13  Carlos O'Donell  <carlos@codesourcery.com>

	* config/elfos.h (MAX_OFILE_ALIGNMENT): Default to largest
	alignment supported by 32-bit ELF.

2006-10-13  Paolo Bonzini  <bonzini@gnu.org>

	PR c/29092
