@@ -1,3 +1,7 @@
+2006-10-15  Richard Guenther  <rguenther@suse.de>
+
+	* gcc.dg/pr29299.c: New testcase.
+
 2006-10-15  Bernhard Fischer  <aldot@gcc.gnu.org>
 
 	PR fortran/24767
