@@ -1,3 +1,11 @@
+2006-10-15  Jan Hubicka  <jh@suse.cz>
+            Richard Guenther  <rguenther@suse.de>
+
+	PR middle-end/29299
+	* cgraphunit.c (cgraph_finalize_compilation_unit): Call
+	process_function_and_variable_attributes on all variables, including
+	those discovered during cgraph construction phase.
+
 2006-10-15  Bernhard Fischer  <aldot@gcc.gnu.org>
 
 	* final.c: Update Copyright year. Commentary typo fix. Fix whitespace
